--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,10 @@
 name = "eviex"
 version = "0.0.0"
 description = "EVents Inverted indEX"
+license = "Apache-2.0"
 authors = ["Lou Marvin Caraig <loumarvincaraig@gmail.com>"]
+readme = "README.md"
+repository = "https://github.com/se7entyse7en/eviex"
 
 [tool.poetry.dependencies]
 python = "^3.6"
