--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ flake8-bugbear = "^20.1.4"
 flake8-commas = "^2.0.0"
 flake8-isort = "^4.0.0"
 flake8-builtins = "^1.5.3"
+bumpversion = "^0.6.0"
 
 [tool.isort]
 force_single_line = true
