--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ flake8-commas = "^2.0.0"
 flake8-isort = "^4.0.0"
 flake8-builtins = "^1.5.3"
 bumpversion = "^0.6.0"
+pytest-cov = "^2.10.1"
+coverage = {extras = ["toml"], version = "^5.3"}
 
 [tool.isort]
 force_single_line = true
@@ -32,6 +34,16 @@ atomic = true
 sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
 default_section = "THIRDPARTY"
 known_first_party = "eviex"
+
+[tool.coverage.run]
+branch = true
+
+[tool.coverage.paths]
+source = ["eviex/"]
+
+[tool.coverage.report]
+fail_under = 90
+show_missing = true
 
 [build-system]
 requires = ["poetry>=0.12"]
