--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ readme = "README.md"
 repository = "https://github.com/se7entyse7en/eviex"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.6.1"
+pandas = "^1.1.3"
+numpy = "^1.19.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
