--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ flake8-builtins = "^1.5.3"
 bumpversion = "^0.6.0"
 pytest-cov = "^2.10.1"
 coverage = {extras = ["toml"], version = "^5.3"}
+pytest-asyncio = "^0.14.0"
 
 [tool.isort]
 force_single_line = true
