Add caching of pip and poetry
Signed-off-by: Lou Marvin Caraig <loumarvincaraig@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ branches:
   only:
   - master
 
+cache:
+  directories:
+    - "$HOME/.cache/pip"
+    - "$HOME/.cache/pypoetry"
+
 stages:
   - Lint
   - Test
