--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,6 +5,8 @@ tag = False
 
 [bumpversion:file:eviex/__init__.py]
 
+[bumpversion:file:tests/test_eviex.py]
+
 [bumpversion:file:HISTORY.md]
 search = ## Unreleased
 replace = ## Unreleased
