--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,8 @@ jobs:
       - set -e
       - git config --global user.name "${GIT_USER}"
       - git config --global user.email "${GIT_EMAIL}"
+      - git remote remove origin
+      - git remote add origin "https://${GITHUB_USER}:${GITHUB_TOKEN}@github.com/${TRAVIS_REPO_SLUG}"
       - poetry config pypi-token.pypi "${PYPI_TOKEN}"
       - set +e
     script:
