Add missing bump of pyproject.toml in .bumpversion.cfg
Signed-off-by: Lou Marvin Caraig <loumarvincaraig@gmail.com>

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,6 +3,8 @@ current_version = 0.1.0
 commit = False
 tag = False
 
+[bumpversion:file:pyproject.toml]
+
 [bumpversion:file:eviex/__init__.py]
 
 [bumpversion:file:tests/test_eviex.py]
